creacion de los test y servicio/endpoint de la creacion de products, tambien documentado y creado el validador para el mismo
